2005-07-12  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_relocate_section): Don't use a plt stub
	when !can_plt_call.

2005-07-12  Alan Modra  <amodra@bigpond.net.au>

	* elf32-xtensa.c (bfd_elf_xtensa_reloc): Warning fix.

2005-07-12  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_set_sdata_syms): Correct __sbss_start value.

2005-07-11  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (_bfd_elf_symbol_refs_local_p): Revert the last
	change.

2005-07-08  Paul Koning  <pkoning@equallogic.com>

	* dwarf2.c (read_address): Check sign_extend_vma to handle targets
	where addresses are sign extended.

2005-07-08  Ralf Corsepius <ralf.corsepius@rtems.org>

	* config.bfd: Mark i960-*-rtems*, or32-*-rtems* as obsolete.
	Mark a29k-*rtems*, hppa*-*-rtems*, *-go32-rtems*, 
	i[3-7]86*-*-rtemscoff*, mips*el-*-rtems*, powerpcle-*-rtems*,
	sparc*-*-rtemsaout* as removed

2005-07-08  Alan Modra  <amodra@bigpond.net.au>

	* elf-hppa.h (elf_hppa_final_link): Use gp val of zero when none
	of the usual sections are found.
	* elf-m10300.c (_bfd_mn10300_elf_size_dynamic_sections): Tidy.
	Strip .dynbss if it is zero size.
	* elf32-arm.c (elf32_arm_size_dynamic_sections): Likewise.
	* elf32-cris.c (elf_cris_size_dynamic_sections): Likewise.
	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Likewise.
	* elf32-i370.c (i370_elf_size_dynamic_sections): Likewise, and
	.dynsbss.
	(i370_elf_finish_dynamic_sections): Don't attempt to write .got
	when it is zero size.
	* elf32-i386.c (elf_i386_size_dynamic_sections): Correct handling
	of .dynbss and zero size sections.
	* elf32-m32r.c (m32r_elf_size_dynamic_sections): Strip .dynbss if
	it is zero size.
	* elf32-m68k.c (elf_m68k_size_dynamic_sections): Tidy.  Strip
	.dynbss if zero size.
	* elf32-ppc.c (ppc_elf_size_dynamic_sections): Likewise, .dynsbss
	too.
	* elf32-s390.c (elf_s390_size_dynamic_sections): Likewise.
	* elf32-sh.c (sh_elf_size_dynamic_sections): Likewise.